# hbot

./: HBot.cabal  LICENSE  README.md
data/: rawlog
src/: Game.hs  Main.hs  Message.hs
